Fix for missing filter button on iphone

--- a/front-gateway/src/components/Search/style/search.scss
+++ b/front-gateway/src/components/Search/style/search.scss
@@ -41,6 +41,13 @@
     top: 0;
   }
 
+  .search-results-scroll {
+    @media (max-width: $screen-xs-max) {
+      overflow-y: scroll; /* has to be scroll, not auto */
+      -webkit-overflow-scrolling: touch;
+    }
+  }
+
   .search-results-container {
     background-color: $gray-lighter;
   }
